--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -23,6 +23,10 @@
   margin-top: 1rem;
   font-size: 1.4rem;
   color: $color-white;
+  @include phone {
+    font-size: 2rem;
+    margin-top: 2rem;
+  }
 }
 .blue-text {
   color: $color-tertiary;
@@ -33,6 +37,9 @@
   color: $color-white;
   line-height: 2;
   width: 80%;
+  @include phone {
+    font-size: 2.5rem;
+  }
 }
 .heading-secondary {
   font-size: 3.5rem;
@@ -47,6 +54,9 @@
   animation-name: heading2;
   animation-duration: 1s;
   animation-delay: 100ms;
+  @include phone {
+    font-size: 5rem;
+  }
 }
 .text-box-mini {
   font-size: 1.1rem;
