--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -16,6 +16,9 @@
   opacity: 0;
   animation-fill-mode: forwards;
   text-decoration: none;
+  @include phone {
+    padding: 2rem 3rem;
+  }
   &-premium {
     animation-delay: 1s;
     background-image: linear-gradient(to right, $color-tertiary, #9e32f1d5);
@@ -23,6 +26,9 @@
     padding: 1.1rem 3.1rem;
     &:hover {
       background-image: linear-gradient(to right, #9e32f1d5, $color-tertiary);
+    }
+    @include phone {
+      padding: 2rem 3rem;
     }
   }
   &:hover {
