--- a/sass/pages/_landing.scss
+++ b/sass/pages/_landing.scss
@@ -21,6 +21,14 @@
     background-position: center;
     text-align: center;
   }
+  .main_btns {
+    @include phone {
+      display: flex;
+      flex-direction: column-reverse;
+      width: 60%;
+      gap: 2rem;
+    }
+  }
 }
 .flow {
   width: 100%;
